samples/_failures_safe/1761343085_ff1ff6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69fb5c34.c: In function ‘print_token’:
./samples/SAFE/__tmp_69fb5c34.c:153:20: error: missing terminating " character
  153 |             printf("STRING: %s (line %
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_69fb5c34.c:153:13: error: expected expression at end of input
  153 |             printf("STRING: %s (line %
      |             ^~~~~~
./samples/SAFE/__tmp_69fb5c34.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_69fb5c34.c:153:13: error: expected declaration or statement at end of input
